--- a/codigo-fonte/caixa-sangria.html
+++ b/codigo-fonte/caixa-sangria.html
@@ -16,11 +16,11 @@
         </div>
         <div class="side-bar active">
           <div class="menu">
-            <div class="item fila"><a href="home.html"><i class="bi bi-house"></i>Home</a></div>
+            <div class="item"><a href="home.html"><i class="bi bi-house"></i>Home</a></div>
             <div class="item"><a href="pdv.html"><i class="bi bi-basket2"></i>PDV</a></div>
             <div class="item"><a href="estoque.html"><i class="bi bi-upc-scan"></i>Estoque</a></div>
             <div class="item">
-              <a class="sub-btn"><i class="bi bi-cash"></i>Caixa<i class="bi bi-caret-right-fill dropdown"></i></a>
+              <a class="sub-btn caixa"><i class="bi bi-cash"></i>Caixa<i class="bi bi-caret-right-fill dropdown"></i></a>
               <div class="sub-menu">
                 <a href="caixa-lancamento.html" class="sub-item">Lançamentos</a>
                 <a href="caixa-sangria.html" class="sub-item">Sangria</a>
@@ -49,7 +49,7 @@
 
       </nav>
     </header>
-        <h1>Pagina Home</h1>
+        <h1>Pagina caixa sangria</h1>
     <script type="text/javascript">
         $(document).ready(function(){
 
