--- a/codigo-fonte/configuracao.html
+++ b/codigo-fonte/configuracao.html
@@ -16,7 +16,7 @@
         </div>
         <div class="side-bar active">
           <div class="menu">
-            <div class="item fila"><a href="home.html"><i class="bi bi-house"></i>Home</a></div>
+            <div class="item"><a href="home.html"><i class="bi bi-house"></i>Home</a></div>
             <div class="item"><a href="pdv.html"><i class="bi bi-basket2"></i>PDV</a></div>
             <div class="item"><a href="estoque.html"><i class="bi bi-upc-scan"></i>Estoque</a></div>
             <div class="item">
@@ -36,7 +36,7 @@
                 <a href="relatorio-comodato.html" class="sub-item">Comodato</a>
               </div>
             </div>
-            <div class="item"><a href="configuracao.html"><i class="bi bi-gear"></i>Configurações</a></div>
+            <div class="item config"><a href="configuracao.html"><i class="bi bi-gear"></i>Configurações</a></div>
             <div class="item">
                 <a class="sub-btn"><i class="bi bi-person-circle"></i>Conta<i class="bi bi-caret-right-fill dropdown"></i></a>
                 <div class="sub-menu">
@@ -49,7 +49,7 @@
 
       </nav>
     </header>
-        <h1>Pagina Home</h1>
+        <h1>Pagina Configurações</h1>
     <script type="text/javascript">
         $(document).ready(function(){
 
