--- a/codigo-fonte/estoque.html
+++ b/codigo-fonte/estoque.html
@@ -16,9 +16,9 @@
         </div>
         <div class="side-bar active">
           <div class="menu">
-            <div class="item fila"><a href="home.html"><i class="bi bi-house"></i>Home</a></div>
+            <div class="item"><a href="home.html"><i class="bi bi-house"></i>Home</a></div>
             <div class="item"><a href="pdv.html"><i class="bi bi-basket2"></i>PDV</a></div>
-            <div class="item"><a href="estoque.html"><i class="bi bi-upc-scan"></i>Estoque</a></div>
+            <div class="item estoque"><a href="estoque.html"><i class="bi bi-upc-scan"></i>Estoque</a></div>
             <div class="item">
               <a class="sub-btn"><i class="bi bi-cash"></i>Caixa<i class="bi bi-caret-right-fill dropdown"></i></a>
               <div class="sub-menu">
@@ -31,7 +31,7 @@
               <a class="sub-btn"><i class="bi bi-bar-chart-fill"></i>Relatório<i class="bi bi-caret-right-fill dropdown"></i></a>
               <div class="sub-menu">
                 <a href="relatorio-financeiro.html" class="sub-item">Financeiro</a>
-                <a href="relatorio-estoque.html" class="sub-item">Estoque</a>
+                <a href="relatorio-estoque.html" class="sub-item ">Estoque</a>
                 <a href="relatorio-vendas.html" class="sub-item">Vendas</a>
                 <a href="relatorio-comodato.html" class="sub-item">Comodato</a>
               </div>
@@ -49,7 +49,7 @@
 
       </nav>
     </header>
-        <h1>Pagina Home</h1>
+        <h1>Pagina estoque</h1>
     <script type="text/javascript">
         $(document).ready(function(){
 
