--- a/codigo-fonte/pdv.html
+++ b/codigo-fonte/pdv.html
@@ -16,8 +16,8 @@
         </div>
         <div class="side-bar active">
           <div class="menu">
-            <div class="item fila"><a href="home.html"><i class="bi bi-house"></i>Home</a></div>
-            <div class="item"><a href="pdv.html"><i class="bi bi-basket2"></i>PDV</a></div>
+            <div class="item"><a href="home.html"><i class="bi bi-house"></i>Home</a></div>
+            <div class="item pdv"><a href="pdv.html"><i class="bi bi-basket2"></i>PDV</a></div>
             <div class="item"><a href="estoque.html"><i class="bi bi-upc-scan"></i>Estoque</a></div>
             <div class="item">
               <a class="sub-btn"><i class="bi bi-cash"></i>Caixa<i class="bi bi-caret-right-fill dropdown"></i></a>
@@ -49,7 +49,7 @@
 
       </nav>
     </header>
-        <h1>Pagina Home</h1>
+        <h1>Pagina pdv</h1>
     <script type="text/javascript">
         $(document).ready(function(){
 
