--- a/codigo-fonte/caixa-fechamento.html
+++ b/codigo-fonte/caixa-fechamento.html
@@ -49,7 +49,7 @@
 
       </nav>
     </header>
-        <h1>Pagina caixa lancamento</h1>
+        <h1>Pagina caixa fechamento</h1>
     <script type="text/javascript">
         $(document).ready(function(){
 
