--- a/codigo-fonte/usuario-gerenciar.html
+++ b/codigo-fonte/usuario-gerenciar.html
@@ -16,32 +16,32 @@
         </div>
         <div class="side-bar active">
           <div class="menu">
-            <div class="item"><a href="index.html"><i class="bi bi-house"></i>Home</a></div>
-            <div class="item"><a href="index.html"><i class="bi bi-basket2"></i>PDV</a></div>
-            <div class="item"><a href="index.html"><i class="bi bi-upc-scan"></i>Estoque</a></div>
+            <div class="item"><a href="home.html"><i class="bi bi-house"></i>Home</a></div>
+            <div class="item"><a href="pdv.html"><i class="bi bi-basket2"></i>PDV</a></div>
+            <div class="item"><a href="estoque.html"><i class="bi bi-upc-scan"></i>Estoque</a></div>
             <div class="item">
               <a class="sub-btn"><i class="bi bi-cash"></i>Caixa<i class="bi bi-caret-right-fill dropdown"></i></a>
               <div class="sub-menu">
-                <a href="#" class="sub-item">Lançamentos</a>
-                <a href="#" class="sub-item">Sangria</a>
+                <a href="caixa-lancamento.html" class="sub-item">Lançamentos</a>
+                <a href="caixa-sangria.html" class="sub-item">Sangria</a>
                 <a href="caixa-fechamento.html" class="sub-item">Fechamento</a>
               </div>
             </div>
             <div class="item">
               <a class="sub-btn"><i class="bi bi-bar-chart-fill"></i>Relatório<i class="bi bi-caret-right-fill dropdown"></i></a>
               <div class="sub-menu">
-                <a href="#" class="sub-item">Financeiro</a>
-                <a href="#" class="sub-item">Estoque</a>
-                <a href="#" class="sub-item">Vendas</a>
-                <a href="#" class="sub-item">Comodato</a>
+                <a href="relatorio-financeiro.html" class="sub-item">Financeiro</a>
+                <a href="relatorio-estoque.html" class="sub-item">Estoque</a>
+                <a href="relatorio-vendas.html" class="sub-item">Vendas</a>
+                <a href="relatorio-comodato.html" class="sub-item">Comodato</a>
               </div>
             </div>
-            <div class="item"><a href="index.html"><i class="bi bi-gear"></i>Configurações</a></div>
+            <div class="item"><a href="configuracao.html"><i class="bi bi-gear"></i>Configurações</a></div>
             <div class="item">
-                <a class="sub-btn"><i class="bi bi-person-circle"></i>Conta<i class="bi bi-caret-right-fill dropdown"></i></a>
+                <a class="sub-btn user"><i class="bi bi-person-circle"></i>Conta<i class="bi bi-caret-right-fill dropdown"></i></a>
                 <div class="sub-menu">
-                  <a href="#" class="sub-item">Gerenciar</a>
-                  <a href="#" class="sub-item">Sair</a>
+                  <a href="usuario-gerenciar.html" class="sub-item">Gerenciar</a>
+                  <a href="index.html" class="sub-item">Sair</a>
                 </div>
               </div>
         </div>
@@ -49,7 +49,7 @@
 
       </nav>
     </header>
-        <h1>Pagina Home</h1>
+        <h1>Pagina Usuario</h1>
     <script type="text/javascript">
         $(document).ready(function(){
 
