--- a/codigo-fonte/index.html
+++ b/codigo-fonte/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="side-bar active">
           <div class="menu">
-            <div class="item fila"><a href="home.html"><i class="bi bi-house"></i>Home</a></div>
+            <div class="item fila home"><a href="home.html"><i class="bi bi-house"></i>Home</a></div>
             <div class="item"><a href="pdv.html"><i class="bi bi-basket2"></i>PDV</a></div>
             <div class="item"><a href="estoque.html"><i class="bi bi-upc-scan"></i>Estoque</a></div>
             <div class="item">
@@ -41,7 +41,7 @@
                 <a class="sub-btn"><i class="bi bi-person-circle"></i>Conta<i class="bi bi-caret-right-fill dropdown"></i></a>
                 <div class="sub-menu">
                   <a href="usuario-gerenciar.html" class="sub-item">Gerenciar</a>
-                  <a href="#" class="sub-item">Sair</a>
+                  <a href="index.html" class="sub-item">Sair</a>
                 </div>
               </div>
         </div>
