--- a/codigo-fonte/caixa-fechamento.html
+++ b/codigo-fonte/caixa-fechamento.html
@@ -24,7 +24,7 @@
               <div class="sub-menu">
                 <a href="caixa-lancamento.html" class="sub-item">Lançamentos</a>
                 <a href="caixa-sangria.html" class="sub-item">Sangria</a>
-                <a href="caixa-fechamento.html" class="sub-item">Fechamento</a>
+                <a class="sub-item">Fechamento</a>
               </div>
             </div>
             <div class="item">
@@ -49,7 +49,13 @@
 
       </nav>
     </header>
-        <h1>Pagina caixa fechamento</h1>
+    <div class="cabecalho">
+      <h1>Fechamento de Caixa</h1>
+    </div>
+    <div class="corpo">
+
+    </div>
+    
     <script type="text/javascript">
         $(document).ready(function(){
 
