--- a/codigo-fonte/relatorio-comodato.html
+++ b/codigo-fonte/relatorio-comodato.html
@@ -33,7 +33,7 @@
                 <a href="relatorio-financeiro.html" class="sub-item">Financeiro</a>
                 <a href="relatorio-estoque.html" class="sub-item">Estoque</a>
                 <a href="relatorio-vendas.html" class="sub-item">Vendas</a>
-                <a href="relatorio-comodato.html" class="sub-item">Comodato</a>
+                <a class="sub-item">Comodato</a>
               </div>
             </div>
             <div class="item"><a href="configuracao.html"><i class="bi bi-gear"></i>Configurações</a></div>
@@ -49,8 +49,13 @@
 
       </nav>
     </header>
-        <h1>Pagina relatorio Comodato</h1>
-    <script type="text/javascript">
+    <div class="cabecalho">
+      <h1>Relatório - Comodato</h1>
+    </div>
+    <div class="corpo"> 
+
+    </div>
+      <script type="text/javascript">
         $(document).ready(function(){
 
           $('.sub-btn').click(function(){
