--- a/codigo-fonte/relatorio-vendas.html
+++ b/codigo-fonte/relatorio-vendas.html
@@ -32,7 +32,7 @@
               <div class="sub-menu ">
                 <a href="relatorio-financeiro.html" class="sub-item">Financeiro</a>
                 <a href="relatorio-estoque.html" class="sub-item">Estoque</a>
-                <a href="relatorio-vendas.html" class="sub-item">Vendas</a>
+                <a class="sub-item">Vendas</a>
                 <a href="relatorio-comodato.html" class="sub-item">Comodato</a>
               </div>
             </div>
@@ -49,7 +49,13 @@
 
       </nav>
     </header>
-        <h1>Pagina Relatorio de Vendas</h1>
+    <div class="cabecalho">
+      <h1>Relatório - Vendas</h1>
+    </div>
+    <div class="corpo"> 
+      
+    </div>
+    
     <script type="text/javascript">
         $(document).ready(function(){
 
