--- a/codigo-fonte/usuario-gerenciar.html
+++ b/codigo-fonte/usuario-gerenciar.html
@@ -40,7 +40,7 @@
             <div class="item">
                 <a class="sub-btn user"><i class="bi bi-person-circle"></i>Conta<i class="bi bi-caret-right-fill dropdown"></i></a>
                 <div class="sub-menu">
-                  <a href="usuario-gerenciar.html" class="sub-item">Gerenciar</a>
+                  <a class="sub-item">Gerenciar</a>
                   <a href="index.html" class="sub-item">Sair</a>
                 </div>
               </div>
@@ -49,7 +49,13 @@
 
       </nav>
     </header>
-        <h1>Pagina Usuario</h1>
+    <div class="cabecalho">
+      <h1>Usuários</h1>
+    </div>
+    <div class="corpo"> 
+      
+    </div>
+    
     <script type="text/javascript">
         $(document).ready(function(){
 
