--- a/codigo-fonte/caixa-sangria.html
+++ b/codigo-fonte/caixa-sangria.html
@@ -23,7 +23,7 @@
               <a class="sub-btn caixa"><i class="bi bi-cash"></i>Caixa<i class="bi bi-caret-right-fill dropdown"></i></a>
               <div class="sub-menu">
                 <a href="caixa-lancamento.html" class="sub-item">Lançamentos</a>
-                <a href="caixa-sangria.html" class="sub-item">Sangria</a>
+                <a class="sub-item">Sangria</a>
                 <a href="caixa-fechamento.html" class="sub-item">Fechamento</a>
               </div>
             </div>
@@ -49,7 +49,13 @@
 
       </nav>
     </header>
-        <h1>Pagina caixa sangria</h1>
+    <div class="cabecalho">
+      <h1>Sangria de Caixa</h1>
+    </div>
+    <div class="corpo"> 
+
+    </div>
+    
     <script type="text/javascript">
         $(document).ready(function(){
 
