--- a/codigo-fonte/configuracao.html
+++ b/codigo-fonte/configuracao.html
@@ -36,7 +36,7 @@
                 <a href="relatorio-comodato.html" class="sub-item">Comodato</a>
               </div>
             </div>
-            <div class="item config"><a href="configuracao.html"><i class="bi bi-gear"></i>Configurações</a></div>
+            <div class="item config"><a><i class="bi bi-gear"></i>Configurações</a></div>
             <div class="item">
                 <a class="sub-btn"><i class="bi bi-person-circle"></i>Conta<i class="bi bi-caret-right-fill dropdown"></i></a>
                 <div class="sub-menu">
@@ -49,7 +49,13 @@
 
       </nav>
     </header>
-        <h1>Pagina Configurações</h1>
+    <div class="cabecalho">
+      <h1>Configurações</h1>
+    </div>
+    <div class="corpo">   
+
+    </div>
+    
     <script type="text/javascript">
         $(document).ready(function(){
 
