--- a/codigo-fonte/estoque.html
+++ b/codigo-fonte/estoque.html
@@ -18,7 +18,7 @@
           <div class="menu">
             <div class="item"><a href="home.html"><i class="bi bi-house"></i>Home</a></div>
             <div class="item"><a href="pdv.html"><i class="bi bi-basket2"></i>PDV</a></div>
-            <div class="item estoque"><a href="estoque.html"><i class="bi bi-upc-scan"></i>Estoque</a></div>
+            <div class="item estoque"><a><i class="bi bi-upc-scan"></i>Estoque</a></div>
             <div class="item">
               <a class="sub-btn"><i class="bi bi-cash"></i>Caixa<i class="bi bi-caret-right-fill dropdown"></i></a>
               <div class="sub-menu">
@@ -49,7 +49,13 @@
 
       </nav>
     </header>
-        <h1>Pagina estoque</h1>
+    <div class="cabecalho">
+      <h1>Estoque</h1>
+    </div>
+    <div class="corpo">  
+        
+    </div>
+    
     <script type="text/javascript">
         $(document).ready(function(){
 
