--- a/codigo-fonte/home.html
+++ b/codigo-fonte/home.html
@@ -16,7 +16,7 @@
         </div>
         <div class="side-bar active">
           <div class="menu">
-            <div class="item fila home"><a href="home.html"><i class="bi bi-house"></i>Home</a></div>
+            <div class="item fila home"><a><i class="bi bi-house"></i>Home</a></div>
             <div class="item"><a href="pdv.html"><i class="bi bi-basket2"></i>PDV</a></div>
             <div class="item"><a href="estoque.html"><i class="bi bi-upc-scan"></i>Estoque</a></div>
             <div class="item">
@@ -49,7 +49,14 @@
 
       </nav>
     </header>
-        <h1>Pagina Home</h1>
+    <div class="cabecalho">
+      <h1>Dashboard</h1>
+    </div>
+    <div class="corpo">
+
+
+    </div>
+
     <script type="text/javascript">
         $(document).ready(function(){
 
