--- a/codigo-fonte/caixa-lancamento.html
+++ b/codigo-fonte/caixa-lancamento.html
@@ -41,7 +41,7 @@
                 <a class="sub-btn"><i class="bi bi-person-circle"></i>Conta<i class="bi bi-caret-right-fill dropdown"></i></a>
                 <div class="sub-menu">
                   <a href="usuario-gerenciar.html" class="sub-item">Gerenciar</a>
-                  <a href="#" class="sub-item">Sair</a>
+                  <a href="index.html" class="sub-item">Sair</a>
                 </div>
               </div>
         </div>
