--- a/codigo-fonte/index.html
+++ b/codigo-fonte/index.html
@@ -27,7 +27,7 @@
             </div>
             <br><br>
             <br><br>
-            <input type="submit" name="submit" id="submit">
+            <input type="submit" name="submit" id="submit" value="Login">
         </fieldset>
     </form>
 </div>
