--- a/codigo-fonte/configuracao.html
+++ b/codigo-fonte/configuracao.html
@@ -7,6 +7,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="UTF-8" ></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="config.css">
+
  
   <title>Titron - Home</title>
 </head>
@@ -52,8 +54,30 @@
     <div class="cabecalho">
       <h1>Configurações</h1>
     </div>
-    <div class="corpo">   
-
+    <div class="corpoconfig">   
+      <form action="">
+        <fieldset class="fieldsetpdv">
+            <br>
+            <br>
+            <div class="inputBox-pdv">
+              <label for="token" class="labelInput-pdv">Token:</label>
+              <input type="text" name="token"  id="token" class="inputUser-pdv" required>
+            </div>
+            <br>
+            <div class="inputBox-pdv">
+              <label for="url" class="labelInput-pdv">URL do SGP:</label>
+              <input type="text" name="url"  id="url" class="inputUser-pdv" required>
+            </div>
+            <br>
+            <div class="inputBox-pdv">
+              <label for="app" class="labelInput-pdv">Nome do APP:</label>
+              <input type="text" name="app"  id="app" class="inputUser-pdv" required>
+            </div>
+            <br><br>
+            <input type="submit" name="submit" value="Adicionar" id="submit-pdv">
+            <input type="button" name="teste"  value="Testar" id="submit-pdv">
+        </fieldset>
+    </form>
     </div>
     
     <script type="text/javascript">
