--- a/codigo-fonte/usuario-gerenciar.html
+++ b/codigo-fonte/usuario-gerenciar.html
@@ -97,17 +97,8 @@
     </div>
     </div>
     
-    
-    <script type="text/javascript">
-        $(document).ready(function(){
+    <script src="scripts/scripts.js"></script>
 
-          $('.sub-btn').click(function(){
-            $(this).next('.sub-menu').slideToggle();
-            $(this).find('.dropdown').toggleClass('rotate');
-          });
-
-        });
-    </script>
   
 </body>
 </html>
