--- a/codigo-fonte/home.html
+++ b/codigo-fonte/home.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/home.css">
+  <script src="scripts/scripts.js" type="text/javascript"></script>
+
 
  
   <title>Titron - Home</title>
@@ -58,17 +60,6 @@
 
 
     </div>
-
-    <script type="text/javascript">
-      $(document).ready(function(){
-      
-        $('.sub-btn').click(function(){
-          $(this).next('.sub-menu').slideToggle();
-          $(this).find('.dropdown').toggleClass('rotate');
-        })
-      
-      });
-      </script>
   
 </body>
 </html>
