--- a/codigo-fonte/configuracao.html
+++ b/codigo-fonte/configuracao.html
@@ -9,12 +9,12 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/config.css">
   <script src="scripts/scripts.js" type="text/javascript"></script>
-
-
+  <script src="scripts/config.js" type="text/javascript"></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
  
   <title>Titron - Configurações</title>
 </head>
-<body>
+<body onload="statussgponload()">
     <header>
       <nav>
         </div>
@@ -59,6 +59,9 @@
     <div class="corpoconfig">   
       <form action="">
         <fieldset class="fieldsetconfig">
+          <div class="status">
+            <label >Status: <span id="statusconexao"></span></label>
+          </div>
             <br>
             <br>
             <div class="inputBox-config">
@@ -75,9 +78,10 @@
               <label for="app" class="labelInput-config">Nome do APP:</label>
               <input type="text" name="app"  id="app" class="inputUser-config" required>
             </div>
+            
             <br><br>
             <input type="submit" name="submit" value="Adicionar" id="submit-config">
-            <input type="button" name="teste"  value="Testar" id="submit-config">
+            <input type="button" name="teste" onclick="consultasgp()" value="Testar" id="submit-config">
         </fieldset>
     </form>
     </div>
