--- a/codigo-fonte/estoque.html
+++ b/codigo-fonte/estoque.html
@@ -56,8 +56,49 @@
     <div class="cabecalho">
       <h1>Estoque</h1>
     </div>
-    <div class="corpo">  
-        
+    <div class="body">
+      <table>
+        <thead>
+            <tr>
+                <th>Produto</th>
+                <th>Quantidade</th>
+                <th>Descrição</th>
+                <th>Preço</th>
+                <th>Remover Produto</th>
+                <th>Editar</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Item 1</td>
+                <td>10</td>
+                <td>XXXXXX</td>
+                <td>R$ 20,00</td>
+                <td><button class="remover">Remover</button></td>
+                <td><i class="bi bi-pencil-square" id="botaoedit"></i></td>
+            </tr>
+            <tr>
+                <td>Item 2</td>
+                <td>15</td>
+                <td>XXXXXXXXXXXX</td>
+                <td>R$ 15,00</td>
+                <td><button class="remover">Remover</button></td>
+                <td><i class="bi bi-pencil-square" id="botaoedit"></i></td>
+            </tr>
+            <tr>
+                <td>Item 3</td>
+                <td>8</td>
+                <td>XXXXXXXX</td>
+                <td>R$ 25,00</td>
+                <td><button class="remover">Remover</button></td>
+                <td><i class="bi bi-pencil-square" id="botaoedit"></i></td>
+            </tr>
+        </tbody>
+    </table>
+    </div>
+
+    <div>
+      <button class="adc">Adicionar Produto</button>
     </div>
 
   
