--- a/codigo-fonte/caixa-fechamento.html
+++ b/codigo-fonte/caixa-fechamento.html
@@ -54,6 +54,10 @@
     </header>
     <div class="cabecalho">
       <h1>Fechamento de Caixa</h1>
+      <div class="tagusuario">
+        <i class="bi bi-person-circle"></i>
+        <label ><span id="tagusuario"></span></label>      
+      </div>
     </div>
     <div class="corpo">
 
