--- a/codigo-fonte/caixa-lancamento.html
+++ b/codigo-fonte/caixa-lancamento.html
@@ -55,6 +55,10 @@
     </header>
     <div class="cabecalho">
       <h1>Lançamento de Caixa</h1>
+      <div class="tagusuario">
+        <i class="bi bi-person-circle"></i>
+        <label ><span id="tagusuario"></span></label>      
+      </div>
     </div>
     <div class="corpo">   
 
