--- a/codigo-fonte/pdv.html
+++ b/codigo-fonte/pdv.html
@@ -67,6 +67,10 @@
   </header>
   <div class="cabecalho">
     <h1>Ponto de Venda</h1>
+    <div class="tagusuario">
+      <i class="bi bi-person-circle"></i>
+      <label ><span id="tagusuario"></span></label>      
+    </div>
   </div>
   <div class="corpo">
     <div class="boxpdv divcorpo">
