--- a/codigo-fonte/usuario-gerenciar.html
+++ b/codigo-fonte/usuario-gerenciar.html
@@ -80,6 +80,10 @@
     <div >
       <fieldset class="fieldsetuser">
         <legend><b>Usuários Cadastrados</b></legend>
+        <div class="tagusuario">
+          <i class="bi bi-person-circle"></i>
+          <label ><span id="tagusuario"></span></label>      
+        </div>
         <table >
           <tbody>
             <th>Usuário</th>
