--- a/codigo-fonte/configuracao.html
+++ b/codigo-fonte/configuracao.html
@@ -55,6 +55,10 @@
     </header>
     <div class="cabecalho">
       <h1>Configurações</h1>
+      <div class="tagusuario">
+        <i class="bi bi-person-circle"></i>
+        <label ><span id="tagusuario"></span></label>      
+      </div>
     </div>
     <div class="corpoconfig">   
       <form action="">
