--- a/codigo-fonte/estoque.html
+++ b/codigo-fonte/estoque.html
@@ -55,6 +55,10 @@
     </header>
     <div class="cabecalho">
       <h1>Estoque</h1>
+      <div class="tagusuario">
+        <i class="bi bi-person-circle"></i>
+        <label ><span id="tagusuario"></span></label>      
+      </div>
     </div>
     <div class="body">
       <table>
