--- a/codigo-fonte/home.html
+++ b/codigo-fonte/home.html
@@ -10,7 +10,6 @@
   <link rel="stylesheet" href="css/home.css">
   <script src="scripts/scripts.js" type="text/javascript"></script>
 
-
  
   <title>Titron - Home</title>
 </head>
@@ -45,7 +44,7 @@
                 <a class="sub-btn"><i class="bi bi-person-circle"></i>Conta<i class="bi bi-caret-right-fill dropdown"></i></a>
                 <div class="sub-menu">
                   <a href="usuario-gerenciar.html" class="sub-item">Gerenciar</a>
-                  <a href="index.html" class="sub-item">Sair</a>
+                  <a class="sub-item" onclick="logout()">Sair</a>
                 </div>
               </div>
         </div>
@@ -55,11 +54,22 @@
     </header>
     <div class="cabecalho">
       <h1>Dashboard</h1>
+      <div class="tagusuario">
+        <i class="bi bi-person-circle"></i>
+        <label ><span id="tagusuario"></span></label>      
+      </div>
     </div>
     <div class="corpo">
 
 
     </div>
-  
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-auth-compat.js"></script>
+    <script src="scripts/init-firebase.js"></script>
+    <script src="scripts/block.js" type="text/javascript"></script>
+    <script src="scripts/home.js" type="text/javascript"></script>
+
+
+
 </body>
 </html>
