--- a/codigo-fonte/index.html
+++ b/codigo-fonte/index.html
@@ -1,37 +1,48 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="UTF-8" ></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/index.css">
 
- 
-  <title>Titron - Login</title>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="UTF-8"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="scripts/index.js"></script>
+
+
+
+    <title>Titron - Login</title>
 </head>
+
 <body class="body-login">
-  <div class="box">
-    <form action="home.html">
-        <fieldset>
-            <legend><b>Login</b></legend>
-            <br>
-            <div class="inputBox">
-                <input type="text" name="user" id="user" class="inputUser" required>
-                <label for="user" class="labelInput">Usuário</label>
-            </div>
-            <br><br>
-            <div class="inputBox">
-                <input type="password" name="senha" id="senha" class="inputUser" required>
-                <label for="senha" class="labelInput">Senha</label>
-            </div>
-            <br><br>
-            <br><br>
-            <input type="submit" name="submit" id="submit" value="Login">
-        </fieldset>
-    </form>
-</div>
+    <div class="box">
+        <form id="formlogin" action="home.html">
+            <fieldset>
+                <legend><b>Login</b></legend>
+                <br>
+                <div class="inputBox">
+                    <input type="text" name="user" id="user" class="inputUser" required>
+                    <label for="user" class="labelInput">Usuário</label>
+                </div>
+                <br><br>
+                <div class="inputBox">
+                    <input type="password" name="senha" id="senha" class="inputUser" required>
+                    <label for="senha" class="labelInput">Senha</label>
+                </div>
+                <br><br>
+                <br><br>
+                <input type="submit" onclick="validadorForm()" name="submit" id="submit" value="Login">
+            </fieldset> 
+        </form>
+    </div>
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-auth-compat.js"></script>
+    <script src="scripts/init-firebase.js"></script>
+    <script src="scripts/index.js"></script>
+
 </body>
+
 </html>
