--- a/codigo-fonte/relatorio-estoque.html
+++ b/codigo-fonte/relatorio-estoque.html
@@ -54,6 +54,10 @@
     </header>
     <div class="cabecalho">
       <h1>Relatório - Estoque</h1>
+      <div class="tagusuario">
+        <i class="bi bi-person-circle"></i>
+        <label ><span id="tagusuario"></span></label>      
+      </div>
     </div>
     <div class="corpo"> 
       
