--- a/codigo-fonte/estoque.html
+++ b/codigo-fonte/estoque.html
@@ -78,7 +78,7 @@
                 <td>10</td>
                 <td>XXXXXX</td>
                 <td>R$ 20,00</td>
-                <td><button class="remover">Remover</button></td>
+                <td><i class="bi bi-trash-fill" id="botaodelete"></i></td>
                 <td><i class="bi bi-pencil-square" id="botaoedit"></i></td>
             </tr>
             <tr>
@@ -86,7 +86,7 @@
                 <td>15</td>
                 <td>XXXXXXXXXXXX</td>
                 <td>R$ 15,00</td>
-                <td><button class="remover">Remover</button></td>
+                <td><i class="bi bi-trash-fill" id="botaodelete"></i></td>
                 <td><i class="bi bi-pencil-square" id="botaoedit"></i></td>
             </tr>
             <tr>
@@ -94,7 +94,7 @@
                 <td>8</td>
                 <td>XXXXXXXX</td>
                 <td>R$ 25,00</td>
-                <td><button class="remover">Remover</button></td>
+                <td><i class="bi bi-trash-fill" id="botaodelete"></i></td>
                 <td><i class="bi bi-pencil-square" id="botaoedit"></i></td>
             </tr>
         </tbody>
