--- a/codigo-fonte/pdv.html
+++ b/codigo-fonte/pdv.html
@@ -178,7 +178,7 @@
             <td>3</td>
             <td>R$ 20,00</td>
             <td>R$ 60,00</td>
-            <td>Deletar</td>
+            <td><i class="bi bi-trash-fill"></i></td>
           </tr>
 
         </tbody>
