alterações pag estoque

--- a/codigo-fonte/estoque.html
+++ b/codigo-fonte/estoque.html
@@ -56,7 +56,7 @@
     <div class="cabecalho">
       <h1>Estoque</h1>
       <div class="tagusuario">
-        <i class="bi bi-person-circle"></i>
+        <a href="usuario-gerenciar.html"><button class="perfiluser"><i class="bi bi-person-circle"></i></button></a>
         <label ><span id="tagusuario"></span></label>      
       </div>
     </div>
