--- a/codigo-fonte/estoque.html
+++ b/codigo-fonte/estoque.html
@@ -105,6 +105,9 @@
       <button class="adc">Adicionar Produto</button>
     </div>
 
+    <div>
+      <button class="buscar" onclick="tranformarEmCampo()">Buscar Produto</button>
+    </div>
   
 </body>
 </html>
