Pagina de relatorio

--- a/codigo-fonte/relatorio-comodato.html
+++ b/codigo-fonte/relatorio-comodato.html
@@ -58,8 +58,76 @@
         <label ><span id="tagusuario"></span></label>      
       </div>
     </div>
-    <div class="corpo"> 
+    <div class="corpo">
 
+
+      <div class="tabelarelcomo divcorpo">
+        <div class="boxrelcomo divcorpo">
+          <form action="">
+            <fieldset class="fieldsetrelcomo">
+              <br>
+              <div class="inputBox-relcomo">
+                <label for="coditem" class="labelInput-relcomo">Cliente:</label>
+                <input type="number" name="coditem" id="coditem" class="inputUser-relcomo" required>
+              </div>
+              <br>
+              <input type="button" name="submit" value="Pesquisar" id="submit-relcomo">
+            </fieldset>
+          </form>
+        </div>
+
+
+
+        <table class="tabelavendas">
+          <thead>
+            <tr class="colunavendas">
+              <th id="cliente">Cliente</th>
+              <th id="descricao">Produto</th>
+              <th id="qtd">Quantidade</th>
+              <th id="data">Data</th>
+              <th id="acao">Ação</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Fulano de tal pereira da silva</td>
+              <td>Produto 1 marca nova</td>
+              <td>3</td>
+              <td>10/05/2024</td>
+              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
+            </tr>
+            <tr>
+              <td>Fulano de tal da silva</td>
+              <td>Produto 1 marca nova</td>
+              <td>3</td>
+              <td>10/05/2024</td>
+              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
+            </tr>
+            <tr>
+              <td>Fulano de tal da silva</td>
+              <td>Produto 1 marca nova</td>
+              <td>3</td>
+              <td>10/05/2024</td>
+              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
+            </tr>
+            <tr>
+              <td>Fulano de tal da silva</td>
+              <td>Produto 1 marca nova</td>
+              <td>3</td>
+              <td>10/05/2024</td>
+              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
+            </tr>
+            <tr>
+              <td>Fulano de tal da silva</td>
+              <td>Produto 1 marca nova</td>
+              <td>3</td>
+              <td>10/05/2024</td>
+              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
+            </tr>
+  
+          </tbody>
+        </table>
+      </div>
     </div>
 
 </body>
