--- a/codigo-fonte/relatorio-comodato.html
+++ b/codigo-fonte/relatorio-comodato.html
@@ -80,7 +80,7 @@
 
         <table class="tabelavendas">
           <thead>
-            <tr class="colunavendas">
+            <tr class="tabcabeca">
               <th id="cliente">Cliente</th>
               <th id="descricao">Produto</th>
               <th id="qtd">Quantidade</th>
