--- a/codigo-fonte/relatorio-financeiro.html
+++ b/codigo-fonte/relatorio-financeiro.html
@@ -59,7 +59,95 @@
       </div>
     </div>
     <div class="corpo"> 
-      
+      <div class="tabelarelfinan divcorpo">
+        <div class="boxrelfinan divcorpo">
+          <form action="">
+            <fieldset class="fieldsetrelfinan">
+              <br>
+              <div class="inputBox-relfinan">
+                <label for="dataini" class="labelInput-relfinan">Data Inicial:</label>
+                <input type="date" name="dataini" id="dataini" class="inputUser-relfinan" required>
+              </div>
+              <br>
+              <br>
+              <div class="inputBox-relfinan">
+                <label for="dataini" class="labelInput-relfinan">Data Inicial:</label>
+                <input type="date" name="dataini" id="dataini" class="inputUser-relfinan" required>
+              </div>
+              <div class="inputBox-relfinan">
+                <input type="radio" name="comodato" id="comodato" class="radio-venda" >
+                <label for="comodato" class="labelInput-pdv">Entrada</label>
+                <input type="radio" name="comodato" id="venda" class="radio-comodato" >
+                <label for="comodato" class="labelInput-pdv">Saida</label>
+              </div>
+              <br>
+              <input type="submit" name="submit" value="Pesquisar" id="submit-relfinan">
+            </fieldset>
+          </form>
+        </div>
+        <table class="tabelavendas">
+          <thead>
+            <tr class="tabcabeca">
+              <th id="data">Data da Operação</th>
+              <th id="valor">Valor</th>
+              <th id="user">Usuário</th>
+              <th id="tipo">Tipo de Operação</th>
+              <th id="acao">Ação</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>10/05/2024</td>
+              <td>R$ 200,00</td>
+              <td>fulano</td>
+              <td>Saida</td>
+              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
+            </tr>
+            <tr>
+              <td>10/05/2024</td>
+              <td>R$ 200,00</td>
+              <td>fulano</td>
+              <td>Saida</td>
+              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
+            </tr>
+            <tr>
+              <td>10/05/2024</td>
+              <td>R$ 200,00</td>
+              <td>fulano</td>
+              <td>Saida</td>
+              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
+            </tr>
+            <tr>
+              <td>10/05/2024</td>
+              <td>R$ 200,00</td>
+              <td>fulano</td>
+              <td>Saida</td>
+              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
+            </tr>
+            <tr>
+              <td>10/05/2024</td>
+              <td>R$ 200,00</td>
+              <td>fulano</td>
+              <td>Saida</td>
+              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
+            </tr>
+  
+          </tbody>
+        </table>
+        <div class="boxresultado">
+          <form action="">
+            <fieldset class="fieldsetrelfinan">
+              <br>
+              <div class="inputBox-relfinan">
+                <label for="dataini" class="labelInput-relfinan">Valor Total: R$ 1.200,00</label>
+              <br>
+            </fieldset>
+          </form>
+        </div>
+      </div>
+
+    </div>
+
     </div>
     
 
