--- a/codigo-fonte/relatorio-comodato.html
+++ b/codigo-fonte/relatorio-comodato.html
@@ -68,7 +68,7 @@
               <br>
               <div class="inputBox-relcomo">
                 <label for="coditem" class="labelInput-relcomo">Cliente:</label>
-                <input type="number" name="coditem" id="coditem" class="inputUser-relcomo" required>
+                <input type="text" name="coditem" id="coditem" class="inputUser-relcomo" required>
               </div>
               <br>
               <input type="button" name="submit" value="Pesquisar" id="submit-relcomo">
