Alteração do botão buscar

--- a/codigo-fonte/estoque.html
+++ b/codigo-fonte/estoque.html
@@ -105,7 +105,7 @@
     </div>
 
     <div>
-      <button class="buscar" onclick="tranformarEmCampo()">Buscar Produto</button>
+      <button class="buscar" >Buscar</button>
     </div>
   
 </body>
