--- a/codigo-fonte/estoque.html
+++ b/codigo-fonte/estoque.html
@@ -1,111 +1,123 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="UTF-8" ></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="UTF-8"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/estoque.css">
   <script src="scripts/scripts.js" type="text/javascript"></script>
 
 
- 
+
   <title>Titron - Estoque</title>
 </head>
-<body>
-    <header>
-      <nav>
-        </div>
-        <div class="side-bar active">
-          <div class="menu">
-            <div class="item"><a href="home.html"><i class="bi bi-house"></i>Home</a></div>
-            <div class="item"><a href="pdv.html"><i class="bi bi-basket2"></i>PDV</a></div>
-            <div class="item estoque"><a><i class="bi bi-upc-scan"></i>Estoque</a></div>
-            <div class="item">
-              <a class="sub-btn"><i class="bi bi-cash"></i>Caixa<i class="bi bi-caret-right-fill dropdown"></i></a>
-              <div class="sub-menu">
-                <a href="caixa-lancamento.html" class="sub-item">Lançamentos</a>
-                <a href="caixa-fechamento.html" class="sub-item">Fechamento</a>
-              </div>
-            </div>
-            <div class="item">
-              <a class="sub-btn"><i class="bi bi-bar-chart-fill"></i>Relatório<i class="bi bi-caret-right-fill dropdown"></i></a>
-              <div class="sub-menu">
-                <a href="relatorio-financeiro.html" class="sub-item">Financeiro</a>
-                <a href="relatorio-vendas.html" class="sub-item">Vendas</a>
-                <a href="relatorio-comodato.html" class="sub-item">Comodato</a>
-              </div>
-            </div>
-            <div class="item"><a href="configuracao.html"><i class="bi bi-gear"></i>Configurações</a></div>
-            <div class="item">
-                <a class="sub-btn"><i class="bi bi-person-circle"></i>Conta<i class="bi bi-caret-right-fill dropdown"></i></a>
-                <div class="sub-menu">
-                  <a href="usuario-gerenciar.html" class="sub-item">Gerenciar</a>
-                  <a href="index.html" class="sub-item">Sair</a>
-                </div>
-              </div>
-        </div>
-        </div>
 
-      </nav>
-    </header>
-    <div class="cabecalho">
-      <h1>Estoque</h1>
-      <div class="tagusuario">
-        <a href="usuario-gerenciar.html"><button class="perfiluser"><i class="bi bi-person-circle"></i></button></a>
-        <label ><span id="tagusuario"></span></label>      
+<body>
+  <header>
+    <nav>
       </div>
+      <div class="side-bar active">
+        <div class="menu">
+          <div class="item"><a href="home.html"><i class="bi bi-house"></i>Home</a></div>
+          <div class="item"><a href="pdv.html"><i class="bi bi-basket2"></i>PDV</a></div>
+          <div class="item estoque"><a><i class="bi bi-upc-scan"></i>Estoque</a></div>
+          <div class="item">
+            <a class="sub-btn"><i class="bi bi-cash"></i>Caixa<i class="bi bi-caret-right-fill dropdown"></i></a>
+            <div class="sub-menu">
+              <a href="caixa-lancamento.html" class="sub-item">Lançamentos</a>
+              <a href="caixa-fechamento.html" class="sub-item">Fechamento</a>
+            </div>
+          </div>
+          <div class="item">
+            <a class="sub-btn"><i class="bi bi-bar-chart-fill"></i>Relatório<i
+                class="bi bi-caret-right-fill dropdown"></i></a>
+            <div class="sub-menu">
+              <a href="relatorio-financeiro.html" class="sub-item">Financeiro</a>
+              <a href="relatorio-vendas.html" class="sub-item">Vendas</a>
+              <a href="relatorio-comodato.html" class="sub-item">Comodato</a>
+            </div>
+          </div>
+          <div class="item"><a href="configuracao.html"><i class="bi bi-gear"></i>Configurações</a></div>
+          <div class="item">
+            <a class="sub-btn"><i class="bi bi-person-circle"></i>Conta<i
+                class="bi bi-caret-right-fill dropdown"></i></a>
+            <div class="sub-menu">
+              <a href="usuario-gerenciar.html" class="sub-item">Gerenciar</a>
+              <a href="index.html" class="sub-item">Sair</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </nav>
+  </header>
+  <div class="cabecalho">
+    <h1>Estoque</h1>
+    <div class="tagusuario">
+      <a href="usuario-gerenciar.html"><button class="perfiluser"><i class="bi bi-person-circle"></i></button></a>
+      <label><span id="tagusuario"></span></label>
     </div>
-    <div class="body">
-      <table>
+  </div>
+  <div class="corpo">
+    <div class="tabelaestoque divcorpo">
+      <div class="boxestoque divcorpo">
+        <form action="">
+          <fieldset class="fieldsetestoque">
+            <br>
+            <div class="inputBox-estoque">
+              <label for="coditem" class="labelInput-estoque">Produto:</label>
+              <input type="text" name="coditem" id="coditem" class="inputUser-estoque" required>
+            </div>
+            <br>
+            <input type="button" value="Pesquisar Produto" id="submit-estoque">
+            <input type="button" value="Cadastrar Produto" id="submit-estoque">
+          </fieldset>
+        </form>
+      </div>
+
+      <table class="tabelavendas">
         <thead>
-            <tr>
-                <th>Produto</th>
-                <th>Quantidade</th>
-                <th>Descrição</th>
-                <th>Preço</th>
-                <th>Remover Produto</th>
-                <th>Editar</th>
-            </tr>
+          <tr class="tabcabeca">
+            <th id="id">ID</th>
+            <th id="prod">Produto</th>
+            <th id="qtd">Quantidade</th>
+            <th id="valor">Preço</th>
+            <th id="acao">Ação</th>
+          </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>Item 1</td>
-                <td>10</td>
-                <td>XXXXXX</td>
-                <td>R$ 20,00</td>
-                <td><i class="bi bi-trash-fill" id="botaodelete"></i></td>
-                <td><i class="bi bi-pencil-square" id="botaoedit"></i></td>
-            </tr>
-            <tr>
-                <td>Item 2</td>
-                <td>15</td>
-                <td>XXXXXXXXXXXX</td>
-                <td>R$ 15,00</td>
-                <td><i class="bi bi-trash-fill" id="botaodelete"></i></td>
-                <td><i class="bi bi-pencil-square" id="botaoedit"></i></td>
-            </tr>
-            <tr>
-                <td>Item 3</td>
-                <td>8</td>
-                <td>XXXXXXXX</td>
-                <td>R$ 25,00</td>
-                <td><i class="bi bi-trash-fill" id="botaodelete"></i></td>
-                <td><i class="bi bi-pencil-square" id="botaoedit"></i></td>
-            </tr>
+          <tr>
+            <td>3987</td>
+            <td>Roteador de marca tak</td>
+            <td>10</td>
+            <td>R$ 20,00</td>
+            <td><i class="bi bi-pencil-square" id="botaoedit"></i><i class="bi bi-trash-fill" id="botaodelete"></i></td>
+          </tr>
+          <tr>
+            <td>3987</td>
+            <td>Roteador de marca tak</td>
+            <td>10</td>
+            <td>R$ 20,00</td>
+            <td><i class="bi bi-pencil-square" id="botaoedit"></i><i class="bi bi-trash-fill" id="botaodelete"></i></td>
+          </tr>
+          <tr>
+            <td>3987</td>
+            <td>Roteador de marca tak</td>
+            <td>10</td>
+            <td>R$ 20,00</td>
+            <td><i class="bi bi-pencil-square" id="botaoedit"></i><i class="bi bi-trash-fill" id="botaodelete"></i></td>
+          </tr>
         </tbody>
-    </table>
+      </table>
     </div>
 
     <div>
-      <button class="adc">Adicionar Produto</button>
     </div>
 
-    <div>
-      <button class="buscar" >Buscar Produto</button>
-    </div>
-  
 </body>
+
 </html>
