--- a/codigo-fonte/caixa-fechamento.html
+++ b/codigo-fonte/caixa-fechamento.html
@@ -25,12 +25,12 @@
             <div class="item">
               <a class="sub-btn caixa"><i class="bi bi-cash"></i>Caixa<i class="bi bi-caret-right-fill dropdown"></i></a>
               <div class="sub-menu">
-                <a href="caixa-lancamento.html" class="sub-item">LanÃ§amentos</a>
+                <a href="caixa-lancamento.html" class="sub-item">Lançamentos</a>
                 <a class="sub-item">Fechamento</a>
               </div>
             </div>
             <div class="item">
-              <a class="sub-btn"><i class="bi bi-bar-chart-fill"></i>RelatÃ³rio<i class="bi bi-caret-right-fill dropdown"></i></a>
+              <a class="sub-btn"><i class="bi bi-bar-chart-fill"></i>Relatório<i class="bi bi-caret-right-fill dropdown"></i></a>
               <div class="sub-menu">
                 <a href="relatorio-financeiro.html" class="sub-item">Financeiro</a>
                 <a href="relatorio-vendas.html" class="sub-item">Vendas</a>
