--- a/codigo-fonte/caixa-fechamento.html
+++ b/codigo-fonte/caixa-fechamento.html
@@ -37,7 +37,7 @@
                 <a href="relatorio-comodato.html" class="sub-item">Comodato</a>
               </div>
             </div>
-            <div class="item"><a href="configuracao.html"><i class="bi bi-gear"></i>ConfiguraÃ§Ãµes</a></div>
+            <div class="item"><a href="configuracao.html"><i class="bi bi-gear"></i>Configurações</a></div>
             <div class="item">
                 <a class="sub-btn"><i class="bi bi-person-circle"></i>Conta<i class="bi bi-caret-right-fill dropdown"></i></a>
                 <div class="sub-menu">
@@ -75,7 +75,7 @@
           <thead>
             <tr class="tabcabeca">
               <th id="valor">Valor do Caixa</th>
-              <th id="tipo">Tipo de OperaÃ§Ã£o</th>
+              <th id="tipo">Tipo de Operação</th>
             </tr>
           </thead>
           <tbody>
