--- a/codigo-fonte/pdv.html
+++ b/codigo-fonte/pdv.html
@@ -144,7 +144,7 @@
             <td>3</td>
             <td>R$ 20,00</td>
             <td>R$ 60,00</td>
-            <td>Deletar</td>
+            <td><i class="bi bi-pencil-square" id="botaoedit"></i><i class="bi bi-trash-fill" id="botaodelete"></i></td>
           </tr>
           <tr>
             <td>123</td>
@@ -152,7 +152,7 @@
             <td>3</td>
             <td>R$ 20,00</td>
             <td>R$ 60,00</td>
-            <td>Deletar</td>
+            <td><i class="bi bi-pencil-square" id="botaoedit"></i><i class="bi bi-trash-fill" id="botaodelete"></i></td>
           </tr>
           <tr>
             <td>123</td>
@@ -160,7 +160,7 @@
             <td>3</td>
             <td>R$ 20,00</td>
             <td>R$ 60,00</td>
-            <td>Deletar</td>
+            <td><i class="bi bi-pencil-square" id="botaoedit"></i><i class="bi bi-trash-fill" id="botaodelete"></i></td>
           </tr>
           <tr>
             <td>123</td>
@@ -168,7 +168,7 @@
             <td>3</td>
             <td>R$ 20,00</td>
             <td>R$ 60,00</td>
-            <td>Deletar</td>
+            <td><i class="bi bi-pencil-square" id="botaoedit"></i><i class="bi bi-trash-fill" id="botaodelete"></i></td>
           </tr>
           <tr>
             <td>123</td>
@@ -176,7 +176,7 @@
             <td>3</td>
             <td>R$ 20,00</td>
             <td>R$ 60,00</td>
-            <td><i class="bi bi-trash-fill"></i></td>
+            <td><i class="bi bi-pencil-square" id="botaoedit"></i><i class="bi bi-trash-fill" id="botaodelete"></i></td>
           </tr>
 
         </tbody>
