alteração nos tittle das paginas

--- a/codigo-fonte/configuracao.html
+++ b/codigo-fonte/configuracao.html
@@ -12,7 +12,7 @@
   <script src="scripts/config.js" type="text/javascript"></script>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
  
-  <title>Titron - Configurações</title>
+  <title>Nexum - Configurações</title>
 </head>
 <body onload="statussgponload()">
     <header>
