--- a/codigo-fonte/pdv.html
+++ b/codigo-fonte/pdv.html
@@ -18,7 +18,7 @@
 
 
 
-  <title>Titron - PDV</title>
+  <title>Nexum - PDV</title>
 </head>
 
 <script src="scripts/pdv.js" type="text/javascript"></script>
