--- a/codigo-fonte/usuario-gerenciar.html
+++ b/codigo-fonte/usuario-gerenciar.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/users.css">
   <script src="scripts/scripts.js" type="text/javascript"></script>
 
-  <title>Titron - Usuários</title>
+  <title>Nexum - Usuários</title>
 </head>
 <body>
     <header>
