--- a/codigo-fonte/home.html
+++ b/codigo-fonte/home.html
@@ -11,7 +11,7 @@
   <script src="scripts/scripts.js" type="text/javascript"></script>
 
  
-  <title>Titron - Home</title>
+  <title>Nexum - Home</title>
 </head>
 <body>
     <header>
