--- a/codigo-fonte/relatorio-comodato.html
+++ b/codigo-fonte/relatorio-comodato.html
@@ -11,7 +11,7 @@
   <script src="scripts/scripts.js" type="text/javascript"></script>
 
  
-  <title>Titron - Relatório</title>
+  <title>Nexum - Relatório</title>
 </head>
 <body>
     <header>
