--- a/codigo-fonte/estoque.html
+++ b/codigo-fonte/estoque.html
@@ -58,8 +58,8 @@
   <div class="cabecalho">
     <h1>Estoque</h1>
     <div class="tagusuario">
-      <a href="usuario-gerenciar.html"><button class="perfiluser"><i class="bi bi-person-circle"></i></button></a>
-      <label><span id="tagusuario"></span></label>
+      <i class="bi bi-person-circle"></i>
+      <label ><span id="tagusuario"></span></label>      
     </div>
   </div>
   <div class="corpo">
